Fixed layout problem

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&display=swap");
 
 * {
   margin: 0;
@@ -144,6 +145,10 @@ section {
 
 .home .intro div {
   width: 65%;
+}
+
+.btns {
+  margin-top: 15px;
 }
 
 .btn {
@@ -321,8 +326,23 @@ section {
   margin: 5px 0;
 }
 
+.post img {
+  margin: 10px 0;
+}
+
 /* 404 */
 .not-found a {
   margin: 2px solid var(--clr7);
 }
 
+/* Code */
+
+pre {
+  font-size: 16px;
+  font-family: "Fira Code", monospace;
+}
+
+pre > code {
+  margin: 20px 0;
+  font-family: "Fira Code", monospace;
+}
